# jbt

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  cc - Copy.hjbt  cc.hjbt
examples/: CMakeLists.txt  example_1.cpp  example_2.cpp
include/: JBT.hpp
include/jbt/: compression.hpp  hjbt.hpp  internal.hpp  io.hpp  jbt.hpp  object.hpp  serialization.hpp  serializer.hpp  tag.hpp
src/: compression.cpp  hjbt.cpp  io.cpp  object.cpp  serialization.cpp  serializer.cpp  tag.cpp
